# couchbase-rs

./: .gitmodules  Cargo.toml  README.md
couchbase-sys/: Cargo.toml  build.rs  lib.rs
couchbase-sys/examples/: helloworld.rs
examples/: helloworld.rs
src/: lib.rs
