[package]
name = "couchbase-sys"
version = "0.1.0"
authors = ["Michael Nitschinger"]
links = "couchbase"
build = "build.rs"
license = "MIT"
repository = "https://github.com/daschl/couchbase-rs"
description = "Native bindings to the libcouchbase library"

[lib]
name = "couchbase_sys"
path = "lib.rs"

[dependencies]
libc = "0.2.10"

[build-dependencies]
pkg-config = "0.3.8"
cmake = "0.1.17"
